coloque el apellido

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav class="navbar">
                 <ul>
                     
-                    <li><a href="a">Inicio</a></li>
+                    <li><a href="a">Inicios</a></li>
                     <li><a href="a">Servicios</a></li>
                     <li><a href="a">Productos</a></li>
                     <li><a href="a">Contacto</a></li>
