--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <nav class="navbar">
                 <ul>
                     
-                    <li><a href="a">Inicios</a></li>
+                    <li><a href="fedora.html">Inicios</a></li>
                     <li><a href="a">Servicios</a></li>
                     <li><a href="a">Productos</a></li>
-                    <li><a href="a">Contacto</a></li>
+                    <li><a href="Formulario.html">Contacto</a></li>
                 </ul>
             </nav>        
 
