--- a/formulario.html
+++ b/formulario.html
@@ -1,5 +1,8 @@
 <form action="/procesar_formulario" method="post">
     <label for="nombre">Nombre:</label>
     <input type="text" id="nombre" name="nombre" placeholder="Ingrese su nombre" required>
+    <label for="apellido">Apellido:</label>
+    <input type="text" id="apellido" name="apellido" placeholder="Ingrese su apellido" required>
     <input type="submit" value="Enviar">
+
 </form>
