--- a/formulario.html
+++ b/formulario.html
@@ -6,7 +6,7 @@
         <form id="crud-form">
             <label for="nombre">Nombre:</label>
             <input type="text" id = "nombre">
-            <label for="edad">Edad:</label>
+            <label for="apellido">Apellido:</label>
             <input type="number" id = "edad">
             <button type="button" onclick="crearRegistro()">Crear</button>
         </form>
