--- a/formulario.html
+++ b/formulario.html
@@ -8,7 +8,7 @@
             <input type="text" id = "nombre">
             <label for="apellido">Apellido:</label>
             <input type="number" id = "edad">
-            <button type="button" onclick="crearRegistro()">Crear</button>
+            <button type="button" onclick="enviarRegistro()">Enviar</button>
         </form>
 
 
@@ -36,14 +36,14 @@
 
             window.crearRegistro = function () {
                 const nombre = document.getElementById("nombre").value;
-                const edad = document.getElementById("edad").value;
-                console.log(nombre, edad);
+                const apellido = document.getElementById("apellido").value;
+                console.log(nombre, apellido);
                 
                 push(
                     ref(database, 'septimo'),
                     {
                         name: nombre,
-                        age: edad 
+                        age: apellido 
                     }
                 );
 
