--- a/formulario.html
+++ b/formulario.html
@@ -7,7 +7,7 @@
             <label for="nombre">Nombre:</label>
             <input type="text" id = "nombre">
             <label for="apellido">Apellido:</label>
-            <input type="number" id = "edad">
+            <input type="text" id = "apellido">
             <button type="button" onclick="enviarRegistro()">Enviar</button>
         </form>
 
